--- a/AndroidTrivia/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTrivia/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,11 +24,12 @@
         android:orientation="vertical">
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/titleFragment"
-            android:name="com.example.android.navigation.TitleFragment"
+            android:id="@+id/myNavHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout="@layout/fragment_title2" />
+            app:navGraph="@navigation/navigation"
+            app:defaultNavHost="true" />
     </LinearLayout>
 
 </layout>
